removed unnecessary dependencies in pom.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ security.client-secret=XY7kmzoNzl100
 security.password-grant-type=password
 security.scope-read=read
 security.scope-write=write
+security.scope-trust=trust
 
 #5 minutes
 security.access-token-validity-seconds=300
