added facebook app credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ security.scope-trust=trust
 security.access-token-validity-seconds=300
 #30 days
 security.refresh-token-validity-seconds=2592000
+
+#facebook
+spring.social.facebook.appId=717251945132721
+spring.social.facebook.appSecret=ae34751fe9a6f301af5fe32f3b267373
