added google app's credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ security.refresh-token-validity-seconds=2592000
 spring.social.facebook.appId=717251945132721
 spring.social.facebook.appSecret=ae34751fe9a6f301af5fe32f3b267373
 
+spring.social.google.client.id=914196792413-6ej0lr1vm3h51g10too2o30pnnjs64af.apps.googleusercontent.com
+spring.social.google.client.secret=mcljjGljruUGKYyZg_GLbWeG
+
 #security.oauth2.client.access-token-uri=https://graph.facebook.com/oauth/access_token
 #security.oauth2.client.user-authorization-uri=https://www.facebook.com/dialog/oauth
 #security.oauth2.client.token-name=oauth_token
