--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,13 +21,6 @@ security.refresh-token-validity-seconds=2592000
 #facebook
 spring.social.facebook.appId=717251945132721
 spring.social.facebook.appSecret=ae34751fe9a6f301af5fe32f3b267373
-
+#google
 spring.social.google.client.id=914196792413-6ej0lr1vm3h51g10too2o30pnnjs64af.apps.googleusercontent.com
 spring.social.google.client.secret=mcljjGljruUGKYyZg_GLbWeG
-
-#security.oauth2.client.access-token-uri=https://graph.facebook.com/oauth/access_token
-#security.oauth2.client.user-authorization-uri=https://www.facebook.com/dialog/oauth
-#security.oauth2.client.token-name=oauth_token
-#security.oauth2.client.authentication-scheme=query
-#security.oauth2.client.client-authentication-scheme=form
-#security.oauth2.resource.user-info-uri=https://graph.facebook.com/me
