--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.social.facebook.appSecret=ae34751fe9a6f301af5fe32f3b267373
 #google
 spring.social.google.client.id=914196792413-6ej0lr1vm3h51g10too2o30pnnjs64af.apps.googleusercontent.com
 spring.social.google.client.secret=mcljjGljruUGKYyZg_GLbWeG
+
+logging.level.org.springframework.web= ERROR
+logging.level.org.springframework.security=INFO
