added logging in SignupController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,35 @@
-client_id = AaGIn-nwyWACZH1f06sy2FekQYiks1QQBPqn8XgsKbhbKAHcilEjfZTgS_NyqAHGiqfVbn5hMDDBgcij
-client_secret = EIOS8GAij8NzskBxgyyhSUyKi_KS9g35BUeZmyHnzOoHa5IGzwHxMMuchgcJMwZQaXz4mHkp0msyoW-Z
-mode = sandbox
+security.paypal.clientId = AaGIn-nwyWACZH1f06sy2FekQYiks1QQBPqn8XgsKbhbKAHcilEjfZTgS_NyqAHGiqfVbn5hMDDBgcij
+security.paypal.clientSecret = EIOS8GAij8NzskBxgyyhSUyKi_KS9g35BUeZmyHnzOoHa5IGzwHxMMuchgcJMwZQaXz4mHkp0msyoW-Z
+security.paypal.mode = sandbox
 
 security.oauth2.resource.filter-order=3
 
 security.security-realm=FPC
 
-security.client-id=clientid
-security.client-secret=XY7kmzoNzl100
-security.password-grant-type=password
-security.scope-read=read
-security.scope-write=write
-security.scope-trust=trust
+security.clientId=clientid
+security.clientSecret=XY7kmzoNzl100
+security.passwordGrantType=password
+security.scopeRead=read
+security.scopeWrite=write
+security.scopeTrust=trust
 
 #5 minutes
-security.access-token-validity-seconds=300
+security.accessTokenValiditySeconds=300
 #30 days
-security.refresh-token-validity-seconds=2592000
+security.refreshTokenValiditySeconds=2592000
 
 #facebook
-spring.social.facebook.appId=717251945132721
-spring.social.facebook.appSecret=ae34751fe9a6f301af5fe32f3b267373
+spring.social.facebookAppId=717251945132721
+spring.social.facebookAppSecret=ae34751fe9a6f301af5fe32f3b267373
 #google
-spring.social.google.client.id=914196792413-6ej0lr1vm3h51g10too2o30pnnjs64af.apps.googleusercontent.com
-spring.social.google.client.secret=mcljjGljruUGKYyZg_GLbWeG
+spring.social.googleClientId=914196792413-6ej0lr1vm3h51g10too2o30pnnjs64af.apps.googleusercontent.com
+spring.social.googleClientSecret=mcljjGljruUGKYyZg_GLbWeG
 
 logging.level.org.springframework.web= ERROR
 logging.level.org.springframework.security=INFO
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+#spring.datasource.username=postgres
+#spring.datasource.password=123
+#spring.jpa.generate-ddl=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
