--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,11 +25,10 @@ spring.social.facebookAppSecret=ae34751fe9a6f301af5fe32f3b267373
 spring.social.googleClientId=914196792413-6ej0lr1vm3h51g10too2o30pnnjs64af.apps.googleusercontent.com
 spring.social.googleClientSecret=mcljjGljruUGKYyZg_GLbWeG
 
-logging.level.org.springframework.web= ERROR
+logging.level.org.springframework.web=ERROR
 logging.level.org.springframework.security=INFO
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
-#spring.datasource.username=postgres
-#spring.datasource.password=123
-#spring.jpa.generate-ddl=true
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_database
+spring.datasource.username=test_user
+spring.datasource.password=qwerty
+spring.datasource.driver-class-name=org.postgresql.Driver
