--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,15 @@ spring.social.googleClientSecret=mcljjGljruUGKYyZg_GLbWeG
 
 logging.level.org.springframework.web=ERROR
 logging.level.org.springframework.security=INFO
-
+# postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5432/test_database
 spring.datasource.username=test_user
 spring.datasource.password=qwerty
 spring.datasource.driver-class-name=org.postgresql.Driver
+# liquibase
+liquibase.change-log=classpath:liquibase/db.changelog-master.xml
+liquibase.check-change-log-location=true
+liquibase.default-schema=public
+liquibase.url=${spring.datasource.url}
+liquibase.user=${spring.datasource.username}
+liquibase.password=${spring.datasource.password}
